# SecureLicense-DUC

./: .gitignore  CMakeLists.txt  README.md  run_demo.sh
.github/workflows/: ci.yml
config/: client.conf  server.conf
docs/: CHANGELOG.md  OPTIMIZATION_ROADMAP.md  TEST_RECORD.md
include/: common.hpp  config.hpp  http.hpp  log.hpp  storage.hpp
scripts/: test_regression.sh
src/: common.cpp  config.cpp  http.cpp  license_client_main.cpp  license_server_main.cpp  log.cpp  storage.cpp
tests/: test_duccore.cpp
tools/benchmark/: bench_license_flow.sh
